# lecture-asr

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  test_pokeball.py  transcribe.py
.claude/agents/: asr-builder.md  cli-builder.md  preprocess-builder.md  qa-inspector.md
.claude/skills/asr-build/: skill.md
.claude/skills/cli-build/: skill.md
.claude/skills/lecture-asr-build/: skill.md
.claude/skills/preprocess-build/: skill.md
.claude/skills/qa-inspect/: skill.md
_workspace/: qa_report.md
docs/: design.md
pipeline/: __init__.py  agc.py  asr.py  cache.py  click_remover.py  converter.py  cross_validate.py  crosstalk.py  denoiser.py  dereverb.py  llm_postprocess.py  models.py  postprocess.py  snr.py
ui/: __init__.py  ditto.py  particles.py  pokeball.py  progress.py
